kubernetes/argo-cd/projects/aws/production-hm/doris/environments/production/kubernetes-manifests/hm-doris-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-doris-ingress
  namespace: production-hm-doris
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: doris.hongbomiao.com
  labels:
    app.kubernetes.io/name: doris
    app.kubernetes.io/part-of: production-hm-doris
spec:
  rules:
    - host: doris.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doriscluster-helm-fe-service
                port:
                  number: 8030
  tls:
    - hosts:
        - doris.hongbomiao.com
      secretName: hm-doris-certificate
